feat: 会话快照、Token加密、权限增强与前端WebSocket重构
- 新增SessionSnapshot/SessionSnapshotService/SessionSnapshotController实现会话快照管理

- 新增TokenEncryptionService实现MCP令牌加密存储

- 新增WorktreeTool支持Git Worktree操作

- 增强QueryEngine查询引擎，优化ContextCascade/ContextCollapseService上下文压缩

- 增强PermissionPipeline权限管道与SystemPromptBuilder提示词构建

- 增强TaskCreateTool任务创建工具功能

- 重构前端WebSocket通信层(stompClient/useWebSocket)与PermissionDialog

- 新增BashCommandClassifierTest测试与文档整理